--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
-
 {
+  "functions": {
+    "api/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/chat.js" },
     { "handle": "filesystem" }
