--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,12 @@
     }
   },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/chat.js" },
-    { "handle": "filesystem" }
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/chat.js"
+    },
+    {
+      "handle": "filesystem"
+    }
   ]
 }
