--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,13 @@
 {
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/chat.js"
+      "dest": "/api/$1"
     },
     {
       "handle": "filesystem"
