--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
   "functions": {
-    "api/**/*.js": {
-      "runtime": "nodejs"
+    "api/chat.js": {
+      "runtime": "nodejs18.x"
     }
   },
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "dest": "/api/chat.js"
     },
     {
       "handle": "filesystem"
