--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/chat.js"
+      "dest": "api/chat.js"
     },
     {
       "handle": "filesystem"
